--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Rélevés Pluviométriques</title>
 </head>
 <body>
-    
+    <main class="main">
+        <div class="container">
+            <canvas id="graph"></canvas>
+            <canvas id="graph2"></canvas>
+        </div>
+    </main>
 
     <script src="src/js/app.js"></script>
 </body>
