--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 </head>
 <body>
     <main class="main">
-        <!-- <div class="container"> -->
             <canvas id="graph"></canvas>
-            <!-- <canvas id="graph2"></canvas> -->
-        <!-- </div> -->
     </main>
 
     <script type="text/javascript" src="data/output/revele2017.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.js" integrity="sha512-9fQaGKKJO2zXOYXpPTEEyzIdx7r3ou0nZgvxS9VICh70AGvdangg7lUVonofpBYrNWd6h2e/FQHoWSCRZkwOUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="src/js/app.js"></script>
+<!--    <script src="src/js/app.js"></script>-->
+    <script src="src/js/test.js"></script>
 </body>
 </html>
