--- a/index.html
+++ b/index.html
@@ -2,19 +2,30 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Relevès pluviométriques à Joigny-sur-Meuse">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/style.css">
-    <title>Rélevés Pluviométriques</title>
+    <title>Relevés Pluviométriques</title>
 </head>
 <body>
     <main class="main">
+
+        <section>
+            <h1>Relevés Pluviométriques</h1>
+            <p>Ci-dessous, les <b>relevés pluviométriques</b> effectuer manuellement à <i>Joigny-Sur-Meuse</i></p>
+        </section>
+
+        <section>
             <canvas id="graph"></canvas>
+        </section>
+
     </main>
 
-    <script type="text/javascript" src="data/output/revele2017.json"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.js" integrity="sha512-9fQaGKKJO2zXOYXpPTEEyzIdx7r3ou0nZgvxS9VICh70AGvdangg7lUVonofpBYrNWd6h2e/FQHoWSCRZkwOUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!--    <script src="src/js/app.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.js"
+            integrity="sha512-9fQaGKKJO2zXOYXpPTEEyzIdx7r3ou0nZgvxS9VICh70AGvdangg7lUVonofpBYrNWd6h2e/FQHoWSCRZkwOUQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--<script src="src/js/app.js"></script>-->
     <script src="src/js/test.js"></script>
 </body>
 </html>
