--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.js"
             integrity="sha512-9fQaGKKJO2zXOYXpPTEEyzIdx7r3ou0nZgvxS9VICh70AGvdangg7lUVonofpBYrNWd6h2e/FQHoWSCRZkwOUQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!--<script src="src/js/app.js"></script>-->
-    <script src="src/js/test.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 </html>
