--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 
     </main>
 
+    <footer>
+        <section>
+            <h1>Aymeric DE LANGE</h1>
+            <p>Mes projets sur mon <a href="https://github.com/AyCoding" target="_blank">Github</a></p>
+        </section>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.js"
             integrity="sha512-9fQaGKKJO2zXOYXpPTEEyzIdx7r3ou0nZgvxS9VICh70AGvdangg7lUVonofpBYrNWd6h2e/FQHoWSCRZkwOUQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
